home-cluster/infra/network/gateway.yaml
---
apiVersion: 'gateway.networking.k8s.io/v1'
kind: 'Gateway'
metadata:
  name: 'entrypoints'
  namespace: 'infra'
spec:
  gatewayClassName: 'traefik'
  listeners:
  - name: 'lan-https'
    protocol: 'HTTPS'
    port: 443
    tls:
      mode: 'Terminate'
      certificateRefs: [{name: 'lan-tls-secret'}]
    allowedRoutes:
      namespaces: {from: 'All'}
