home-cluster/infra/network/routing.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wanauth
  namespace: infra
spec:
  basicAuth:
    secret: wanauth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: infra
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`gateway-p.zhaohai.li`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wan-routing
  namespace: infra
spec:
  entryPoints: [wansecure]
  routes:
  - match: HostRegexp(`[a-zA-Z\-_.]+-p\.zhaohai\.li`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: wanauth
    services:
    - name: traefik
      kind: Service
      port: websecure
      passHostHeader: true
      serversTransport: inner-redirect
  - match: HostRegexp(`[a-zA-Z\-_.]+([^-][^p]|[^-].|.[^p])\.zhaohai\.li`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik
      kind: Service
      port: websecure
      passHostHeader: true
      serversTransport: inner-redirect
